src/test/ui/suggestions/issue-62843.stderr
error[E0277]: expected a `std::ops::FnMut<(char,)>` closure, found `std::string::String`
  --> $DIR/issue-62843.rs:4:32
   |
LL |     println!("{:?}", line.find(pattern));
   |                                ^^^^^^^
   |                                |
   |                                expected an implementor of trait `std::str::pattern::Pattern<'_>`
   |                                help: consider borrowing here: `&pattern`
   |
   = note: the trait bound `std::string::String: std::str::pattern::Pattern<'_>` is not satisfied
   = note: required because of the requirements on the impl of `std::str::pattern::Pattern<'_>` for `std::string::String`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
